Apply more "may be final" refactorings